# mfd-code-quality

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/prepare_test_env/: action.yml
.github/workflows/: build_upload_whl.yml  check_code_standard.yml  codeql.yml  main.yml  manual_release.yml  publish_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml  scorecard.yml
mfd_code_quality/code_standard/: checks.py  generic_pyproject.txt
mfd_code_quality/testing_utilities/: unit_tests.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  genindex.rst  index.rst  py-modindex.rst
tests/unit/test_mfd_code_quality/: test_mfd_code_quality.py  test_utils.py
tests/unit/test_mfd_code_quality/test_code_standard/: test_checks.py  test_configure.py  test_formats.py
tests/unit/test_mfd_code_quality/test_coverage/: test_utils.py
tests/unit/test_mfd_code_quality/test_testing_utilities/: __init__.py  test_import_testing.py  test_system_tests.py  test_unit_tests.py
